# higher-order-bgn

./: CMakeLists.txt  README  README.md  config.h.cmake  dune.module  gcc11.opts  higher-order-bgn.pc.in  initial.ini
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/higher-order-bgn/: CMakeLists.txt  higher-order-bgn.hh
src/: CMakeLists.txt  Curve.hh  Curve_SP.hh  Surface.hh  Surface_SP.hh  eoc_curve_test.cc  eoc_curve_test_ref.cc  eoc_surface_test.cc  eoc_test.hh  higher-order-bgn_curve.cc  higher-order-bgn_surface.cc  implicitsurface.hh
src/grids/: ellipse.msh  ellipsoid.msh  sphere_very_rough.msh
